--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test:gql": "node scripts/testGraphQL.js"
   },
   "dependencies": {
     "apollo-server-express": "^3.12.0",
