--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ PORT=4000
 # Enable debug logging of selected auth headers (masked) to stdout (true/false)
 DEBUG_LOG_AUTH_HEADERS=false
 
+# Enable very detailed logging of ALL requests/responses to stdout (true/false)
+# WARNING: This will log headers, body, IP addresses - use only for debugging!
+DEBUG_DETAILED_REQUESTS=false
+
 # Optional file path to also append auth header logs (only used if DEBUG_LOG_AUTH_HEADERS=true)
 # For ephemeral platforms (Railway/Koyeb/Vercel) this may not persist across restarts.
 # AUTH_HEADERS_LOG_FILE=auth-headers.log
